<resources>
    <string name="app_name">RuntipsMx</string>
    <string name="txtLoginEntrar">Entrar</string>
    <string name="txtLoginRegistro">¿Eres nuevo? Regístrate</string>
    <string name="txtLoginLabelUsuario">Correo electrónico</string>
    <string name="txtLoginLabelPassword">Password</string>
    <string name="txtLoginRemember">Recordar datos de usuario</string>
    <string name="msgMailNotValid">Correo electrónico no válido</string>
    <string name="msgPasswordNotValid">Password incorrecto</string>

    <string name="txtRegisterTitle">Datos de registro</string>
    <string name="txtRegisterName">Nombre</string>
    <string name="txtRegisterSurname">Apellidos</string>
    <string name="txtRegisterBirth">Fecha nacimiento</string>
    <string name="txtBirthHint"><i>yyyy-mm-dd</i></string>
    <string name="txtRegisterGender">Sexo</string>
    <string name="txtRegisterMan">Hombre</string>
    <string name="txtRegisterWoman">Mujer</string>
    <string name="txtRegisterState">Estado</string>
    <string-array name="spinnerRegisterStates">
        <item>Aguascalientes</item>
        <item>BCN</item>
        <item>BCS</item>
        <item>Campeche</item>
        <item>CDMX</item>
        <item>Chiapas</item>
        <item>Chihuahua</item>
        <item>Coahuila</item>
        <item>Colima</item>
        <item>Durango</item>
        <item>Guanajuato</item>
        <item>Guerrero</item>
        <item>Hidalgo</item>
        <item>Jalisco</item>
        <item>México</item>
        <item>Michoacán</item>
        <item>Morelos</item>
        <item>Nayarit</item>
        <item>Nuevo León</item>
        <item>Oaxaca</item>
        <item>Puebla</item>
        <item>Querétaro</item>
        <item>Quintana Roo</item>
        <item>San Luis Potosí</item>
        <item>Sinaloa</item>
        <item>Sonora</item>
        <item>Tabasco</item>
        <item>Tamaulipas</item>
        <item>Tlaxcala</item>
        <item>Veracruz</item>
        <item>Yucatán</item>
        <item>Zacatecas</item>
    </string-array>
    <string name="txtRegisterMail">Correo</string>
    <string name="txtRegisterPhone">Celular (WhatsApp)</string>
    <string name="txtRegisterPassword">Password</string>
    <string name="txtRegisterConfirmPassword">Confirmar password</string>
    <string name="txtRegisterConditions">Acepto términos y condiciones</string>
    <string name="btnRegisterCancel">Cancelar</string>
    <string name="btnRegisterOK">Continuar</string>

    <string name="btnEditOK">Guardar cambios</string>

    <string name="msgRegisterError">Error en el formulario. Verifique sus datos</string>
    <string name="msgRegisterUnlegibleError">Error desconocido</string>
    <string name="msgRegisterMailTaken">Correo ya existente. Utilice otro</string>
    <string name="msgRegisterAcceptTerms">Debes aceptar los términos y condiciones para continuar.</string>

    <string name="txtTermsTitle">Términos y condiciones</string>
    <string name="txtPrivacy">Aviso de privacidad</string>

    <string name="txtHeartRateTitle">Finalizar test físico</string>
    <string name="txtRadio1">Medir con cámara</string>
    <string name="txtRadio2">Capturar pulso</string>
    <string name="txtHeartRateInstructions">Cubre la cámara
        con tu dedo indice hasta que el recuadro quede totalmente rojo</string>
    <string name="txtHeartRateInsertWeight">Peso (kg)</string>
    <string name="txtHeartRateInsertTime">Tiempo realizado en el test</string>
    <string name="txtHeartRateMessage1">Pulsaciones por minuto (PPM): </string>
    <string name="txtHeartRateMessage2"> PPM</string>
    <string name="txtHeartRateContinue">Enviar resultados</string>
    <string name="txtHeartRateBack">Ver instrucciones</string>
    <string name="txtHeartRateIncorrectMeasure">Reintenta medir tu pulso</string>
    <string name="txtHeartRateIncorrectTime">Ingresa valor de tiempo</string>
    <!--<string name="urlTestFisico">https://youtu.be/0neVuGOg6NY</string>-->
    <string name="urlTestFisico">https://www.youtube.com/embed/0neVuGOg6NY</string>
    <string name="urlTestFisicoId">0neVuGOg6NY</string>

    <string name="btnStartToday">Entrenamiento de hoy</string>

    <string name="btnFreeRun">Correr</string>

    <string name="txtRunLabelTime">Tiempo</string>
    <string name="txtRunLabelDistance">Distancia</string>
    <string name="txtRunLabelPace">Ritmo</string>

    <string name="menuPaquetesEntrenamiento">Paquetes entrenamiento</string>
    <string name="menuTestFisico">Realizar test físico</string>
    <string name="menuContacto">Contacto</string>
    <string name="menuDatos">Datos personales</string>
    <string name="menuCerrarSesion">Cerrar sesión</string>

    <string name="txtTab01">Mi información</string>
    <string name="txtTab02">Plan semanal</string>

    <string name="txtStartPaidWelcome">Hola %1$s, aquí tienes el entrenamiento de esta semana.</string>
    <string name="txtStartInitialWelcome">%1$s, tu último resultado del test físico es: </string>

    <string name="txtStartDateTitle">Fecha:</string>
    <string name="txtStartVO2Title">VO2 máx. actual</string>
    <string name="txtStartHealthTitle">Estado de salud</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Nav header desc</string>
    <string name="nav_header_subtitle">Nav header subtitle</string>

    <string name="txtContactText1">Cualquier duda o comentario, por favor contáctame por los
        siguientes medios:</string>
    <string name="btnContactWhatsapp">WhatsApp</string>
    <string name="btnContactMail">Correo</string>
    <string name="txtContactText2">Siguenos también en nuestras redes sociales</string>
    <string name="btnContactFacebook">Facebook</string>
    <string name="btnContactInstagram">Instagram</string>
    <string name="numberWhatsapp">5215546914686</string>
    <string name="urlMail">coach@runtipsmx.com</string>
    <string name="urlFacebook">https://www.facebook.com/clubdecorredoresruntipsmx/</string>
    <string name="idFacebook">155134764692651</string>
    <string name="urlInstagram">https://www.instagram.com/runtipsmx/</string>

    <string name="alertGPSTitle">GPS</string>
    <string name="alertGPSMessage">Se requiere permiso de localización, ¿deseas habilitarlo?</string>
    <string name="alertGPSOK">Si</string>
    <string name="alertGPSCancel">No</string>

    <string name="txtTrainingPack1">Online</string>
    <string name="txtOnlinePack01">\u2022 Entrenamiento personalizado.</string>
    <string name="txtOnlinePack02">\u2022 Acceso a videos de fortalecimiento muscular.</string>
    <string name="txtOnlinePack03">\u2022 Test físico de diagnóstico y seguimiento.</string>
    <string name="txtOnlinePack04">\u2022 Seguimiento personalizado. </string>
    <string name="txtOnlinePackFee">COSTO: $160.00 MXN mensual</string>

    <string name="txtTrainingPack2">Presencial</string>
    <string name="txtLivePack01">\u2022 Entrenamiento personalizado complementadas con <b>sesiones presenciales.</b></string>
    <string name="txtLivePack02">\u2022 Acceso a videos de fortalecimiento muscular.</string>
    <string name="txtLivePack03">\u2022 Test físico de diagnóstico y seguimiento.</string>
    <string name="txtLivePack04">\u2022 Seguimiento personalizado.</string>
    <string name="txtLivePack05">\u2022 <b>Descuento en servicios como nutrición, médicos y masajes.</b></string>
    <string name="txtLivePackFee">COSTO: $390.00 MXN mensual</string>
    <string name="txtLivePack06">* Disponible sólo en la Ciudad de México.</string>

    <string name="txtTrainingPack3">Premium</string>
    <string name="txtPremiumPack01">\u2022 Entrenamiento, running y gym personalizado.</string>
    <string name="txtPremiumPack02">\u2022 Sesiones de entrenamiento en el lugar de tu preferencia</string>
    <string name="txtPremiumPack03">\u2022 Evaluación física de diagnóstico y seguimiento</string>
    <string name="txtPremiumPack04">\u2022 Seguimiento personalizado</string>
    <string name="txtPremiumPackFee">COSTO: Contáctame para solicitar cotización</string>

    <string name="txtTrainingPack4">Empresarial</string>
    <string name="txtEnterprisePack01">\u2022 Evaluaciones físicas y nutrimentales.</string>
    <string name="txtEnterprisePack02">\u2022 Elaboramos programas para tus colaboradores acorde a sus necesiades</string>
    <string name="txtEnterprisePackFee">COSTO: Contáctame para solicitar cotización</string>

    <!--<string name="txtSpeedInstructions">Configura tus intervalos</string>
    <string name="txtSpeedIntervalTime">Tiempo (seg)</string>
    <string name="txtSpeedIntervalDistance">Distancia (mts)</string>
    <string name="txtSpeedHintDistance">Tiempo/distancia</string>
    <string-array name="spinnerSpeedIntervalTimes">
        <item>30</item>
        <item>60</item>
        <item>90</item>
        <item>120</item>
        <item>180</item>
        <item>240</item>
    </string-array>
    <string-array name="spinnerSpeedIntervalDistances">
        <item>100</item>
        <item>200</item>
        <item>300</item>
        <item>400</item>
        <item>500</item>
        <item>1000</item>
        <item>1500</item>
        <item>2000</item>
    </string-array>-->

    <string name="txtSpeedLabelTotalTime">Tiempo total:</string>
    <string name="txtSpeedLabelTotalDistance">Distancia total:</string>
    <string name="txtSpeedLabelSuggestedPace">Ritmo sugerido:</string>
    <string name="txtSpeedWaitingForStart">En espera...</string>
    <string name="txtSpeedRunning">Intervalo %2$d</string>
    <string name="txtSpeedResting">Descanso %2$d</string>

    <string name="btnLabelStart">Iniciar</string>
    <string name="btnLabelPause">Pausa</string>
    <string name="btnLabelStop">Detener</string>

    <string name="txtPlansLabelTitle">Planes de entrenamiento</string>
    <string name="txtPlansLabelAnnouncement">%1$s, en <b>RuntipsMx</b> tenemos diferentes
        paquetes. Elige aquel que se ajusta mejor a tus necesidades:</string>
    <string name="txtPlansSubtitleOnline">Online</string>
    <string name="txtPlansTextOnline"></string>


</resources>
