<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/paddingTop"
    android:paddingEnd="@dimen/paddingRight"
    android:paddingStart="@dimen/paddingLeft"
    android:paddingBottom="16dp"
    android:background="@drawable/background02"
    tools:context=".activities.EditUserActivity">

    <TextView
        android:id="@+id/txtEditTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtRegisterTitle"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutEditName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:hint="@string/txtRegisterName"
        app:layout_constraintEnd_toStartOf="@+id/textInputLayoutEditSurname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEditTitle">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txtEditName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="9"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:nextFocusDown="@id/txtEditSurname"
            android:textSize="16sp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutEditSurname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/txtRegisterSurname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toBottomOf="@+id/txtEditTitle">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txtEditSurname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="11"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:nextFocusDown="@id/textEditBirth"
            android:textSize="16sp"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutEditBirth"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/txtRegisterBirth"
        app:layout_constraintEnd_toStartOf="@+id/radioGroupEditGender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEditName">

        <EditText
            android:id="@+id/textEditBirth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="false"
            android:ems="8"
            android:inputType="date" />

    </android.support.design.widget.TextInputLayout>

    <RadioGroup
        android:id="@+id/radioGroupEditGender"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEditSurname">

        <RadioButton
            android:id="@+id/radioEditMan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/txtRegisterMan"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radioEditWoman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/txtRegisterWoman"
            android:textSize="16sp" />
    </RadioGroup>

    <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
        android:id="@+id/spinnerEditState"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:hint="@string/txtRegisterState"
        android:nextFocusDown="@id/txtRegisterPhone"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/textInputLayoutEditPhone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEditBirth"
        app:met_floatingLabel="normal" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutEditPhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/txtRegisterPhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEditBirth">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txtEditPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="9"
            android:inputType="phone"
            android:maxLines="1"
            android:nextFocusDown="@id/txtEditMail"
            android:textSize="16sp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutEditMail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/txtRegisterMail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerEditState">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txtEditMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:nextFocusDown="@id/txtEditPassword"
            android:textSize="16sp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutEditPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:hint="@string/txtRegisterPassword"
        app:layout_constraintEnd_toStartOf="@+id/textInputLayoutEditConfirmPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEditMail"
        app:passwordToggleEnabled="true"
        app:layout_constraintHorizontal_weight="1">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txtEditPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="9"
            android:inputType="textPassword"
            android:maxLines="1"
            android:nextFocusDown="@id/txtEditConfirmPassword"
            android:textSize="16sp"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutEditConfirmPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/txtRegisterConfirmPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEditMail"
        app:passwordToggleEnabled="true"
        app:layout_constraintHorizontal_weight="1">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txtEditConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="11"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textSize="16sp" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnEditOK"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnEditOK"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"/>

</android.support.constraint.ConstraintLayout>