<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/paddingTop"
    android:paddingEnd="@dimen/paddingRight"
    android:paddingStart="@dimen/paddingLeft"
    android:background="@drawable/background02"
    tools:context=".defaultversion.activities.RegisterActivity">

    <TextView
        android:id="@+id/txtRegisterTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtRegisterTitle"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutRegisterName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:hint="@string/txtRegisterName"
        app:layout_constraintEnd_toStartOf="@+id/textInputLayoutRegisterSurname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRegisterTitle">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txtRegisterName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="9"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:nextFocusDown="@id/txtRegisterSurname"
            android:textSize="16sp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutRegisterSurname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/txtRegisterSurname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toBottomOf="@+id/txtRegisterTitle">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txtRegisterSurname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="11"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:nextFocusDown="@id/textRegisterBirth"
            android:textSize="16sp"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutRegisterBirth"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/txtRegisterBirth"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutRegisterName">

        <EditText
            android:id="@+id/textRegisterBirth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="8"
            android:inputType="date"
            android:hint="@string/txtBirthHint" />

    </android.support.design.widget.TextInputLayout>

    <ImageButton
        android:id="@+id/btnRegisterCalendar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toStartOf="@+id/radioGroupRegisterGender"
        app:layout_constraintStart_toEndOf="@+id/textInputLayoutRegisterBirth"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutRegisterSurname"
        app:srcCompat="@drawable/ic_calendar"
        tools:ignore="ContentDescription" />

    <RadioGroup
        android:id="@+id/radioGroupRegisterGender"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutRegisterSurname">

        <RadioButton
            android:id="@+id/radioRegisterMan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/txtRegisterMan"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radioRegisterWoman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/txtRegisterWoman"
            android:textSize="16sp" />
    </RadioGroup>

    <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
        android:id="@+id/spinnerRegisterState"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:hint="@string/txtRegisterState"
        android:nextFocusDown="@id/txtRegisterPhone"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/textInputLayoutPhone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutRegisterBirth"
        app:met_floatingLabel="normal" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutPhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/txtRegisterPhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutRegisterBirth">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txtRegisterPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="9"
            android:inputType="phone"
            android:maxLines="1"
            android:nextFocusDown="@id/txtRegisterMail"
            android:textSize="16sp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutRegisterMail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/txtRegisterMail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerRegisterState">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txtRegisterMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:nextFocusDown="@id/txtRegisterPassword"
            android:textSize="16sp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutRegisterPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:hint="@string/txtRegisterPassword"
        app:layout_constraintEnd_toStartOf="@+id/textInputLayoutRegisterConfirmPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutRegisterMail"
        app:passwordToggleEnabled="true"
        app:layout_constraintHorizontal_weight="1">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txtRegisterPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="9"
            android:inputType="textPassword"
            android:maxLines="1"
            android:nextFocusDown="@id/txtRegisterConfirmPassword"
            android:textSize="16sp"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutRegisterConfirmPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/txtRegisterConfirmPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutRegisterMail"
        app:passwordToggleEnabled="true"
        app:layout_constraintHorizontal_weight="1">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txtRegisterConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="11"
            android:inputType="textPassword"
            android:maxLines="1"
            android:nextFocusDown="@id/checkRegisterConditions"
            android:textSize="16sp" />

    </android.support.design.widget.TextInputLayout>

</android.support.constraint.ConstraintLayout>