<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/paddingTop"
        android:paddingEnd="@dimen/paddingRight"
        android:paddingStart="@dimen/paddingLeft"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txtPlansTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtPlansLabelTitle"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtPlansIndications"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtPlansLabelAnnouncement"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/txtPlansSubtitleOnline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtPlansSubtitleOnline"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/txtPlansOnline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtPlansLabelAnnouncement"
            android:textAlignment="center"
            android:textSize="24sp" />


    </LinearLayout>

</ScrollView>
